--- a/templates/base.html
+++ b/templates/base.html
@@ -51,7 +51,7 @@
         <section class="justify-center mt-5 p-5 lg:bottom-0  bg-white text-center duration-300 border-b">
             <h1 class="flex flex-col lg:flex-row items-center justify-center">
                 <span class="text-gray-700">made by </span>
-                <a href="https://www.linkedin.com/in/agboba/" class="flex items-center ml-2">
+                <a href="www.linkedin.com/in/martin-agbo-ovolab" class="flex items-center ml-2">
                     <span>
                         <img src="" width="20" class="rounded-full" alt="G"></span>
                     <span class="ml-2 font-semibold underline dark:text-white">AGBO Martin</span>
