--- a/templates/compo.html
+++ b/templates/compo.html
@@ -46,7 +46,7 @@
             Currently, we're looking for contributors for the
             <a target="_blank"
               class="font-bold text-primary transition duration-150 ease-in-out hover:text-primary-600 focus:text-primary-600 active:text-primary-700 text-primary-400 hover:text-primary-500 focus:text-primary-500 active:text-primary-600"
-              href="">This Project</a>
+              href="https://github.com/Elprof44/Togo-Tech-Communities.git">This Project</a>
             repository. If you're interested in contributing, please open
             your pull request on GitHub & contact us.
           </p>
@@ -67,13 +67,13 @@
             </a>
           </div>
           <div class="mt-4 bg-gray-300 rounded hover:bg-gray-400 w-72 text-center mx-4 md:w-3/6">
-            <a href="" target="_blank"
+            <a href="https://github.com/Elprof44/Togo-Tech-Communities.git" target="_blank"
               class="inline-block w-[300px] rounded bg-primary-700 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-blue-600 ">
               GO TO contribut ON GITHUB
             </a>
           </div>
           <div class="mt-4 bg-gray-300 rounded hover:bg-gray-400 w-72 text-center mx-4 md:w-3/6">
-            <a href="" target="_blank"
+            <a href="https://github.com/Elprof44/Togo-Tech-Communities/stargazers" target="_blank"
               class="inline-block w-[300px] rounded bg-primary-700 px-6 pb-2 pt-2.5 text-xs font-medium uppercase leading-normal text-blue-600 ">
               STAR US ON GITHUB
             </a>
@@ -121,11 +121,11 @@
 
       </p>
       <!-- <span class="text-gray-700">Proudly made by </span>
-      <a href="https://www.linkedin.com/in/likeur-off-47984327a/" class="flex items-center ml-2">
+      <a href="" class="flex items-center ml-2">
         <span><img
-            src="https://media.licdn.com/dms/image/D4D03AQFUf8XXyZiZmQ/profile-displayphoto-shrink_200_200/0/1689182733552?e=1705536000&v=beta&t=HdFEsfPX6FMrlzaa3jySKVPnckXKcyM0uJgFQ6kKLGA"
+            src=""
             width="20" class="rounded-full" alt=""></span>
-        <span class="ml-2 font-semibold underline text-white">Likeur off</span>
+        <span class="ml-2 font-semibold underline text-white">AGBO Martin</span>
       </a> -->
     </h1>
   </section>
