--- a/templates/compo.html
+++ b/templates/compo.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="static/assets/css/style.css">
   <link rel="stylesheet" href="static/assets/css/boxicons.min.css">
-  <link rel="stylesheet" href="static/assets/css/Tailwind.min.css">
   <link rel="shortcut icon" href="static/assets/fonts/icono.png" type="image/x-icon">
+  <script src="https://cdn.tailwindcss.com/3.3.0"></script>
   <title>Togo Tech Communities</title>
 </head>
 
