--- a/templates/base.html
+++ b/templates/base.html
@@ -53,7 +53,7 @@
                 <span class="text-gray-700">made by </span>
                 <a href="www.linkedin.com/in/martin-agbo-ovolab" class="flex items-center ml-2">
                     <span>
-                        <img src="" width="20" class="rounded-full" alt="G"></span>
+                        <img src="" width="20" class="rounded-full" alt=""></span>
                     <span class="ml-2 font-semibold underline dark:text-white">AGBO Martin</span>
                 </a>
             </h1>
